:bug: Fix library list spacing

--- a/frontend/resources/styles/main/partials/modal.scss
+++ b/frontend/resources/styles/main/partials/modal.scss
@@ -693,8 +693,8 @@
       .section-list-item {
         padding: $size-4 0;
         border-bottom: 1px solid $color-gray-20;
-        position: relative;
         display: flex;
+        align-items: center;
         justify-content: space-between;
 
         .item-name {
@@ -711,7 +711,6 @@
 
         .item-button {
           cursor: pointer;
-          position: absolute;
           top: $size-4;
           right: 0;
           border: 1px solid $color-primary;
@@ -720,6 +719,7 @@
           background: $color-primary;
           color: $color-black;
           padding: $size-2;
+          margin-bottom: 0;
 
           &:hover {
             color: $color-primary;
@@ -770,6 +770,11 @@
         margin: 0;
         padding: 0;
         flex-grow: 1;
+
+        &:hover,
+        &:focus {
+          outline: none;
+        }
       }
 
       & .search-icon {
